--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.konflux.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.konflux.cpu
@@ -135,6 +135,8 @@ RUN --mount=type=cache,target=/root/.cache/pip \
         git clone --depth 1 --branch "apache-arrow-17.0.0" https://github.com/apache/arrow.git && \
         cd arrow/cpp && \
         mkdir release && cd release && \
+        ARROW_S3_FLAG="" && \
+        if [ "$TARGETARCH" != "s390x" ]; then ARROW_S3_FLAG="-DARROW_S3=ON"; fi && \
         cmake -DCMAKE_BUILD_TYPE=Release \
               -DCMAKE_INSTALL_PREFIX=/usr/local \
               -DARROW_PYTHON=ON \
@@ -148,7 +150,7 @@ RUN --mount=type=cache,target=/root/.cache/pip \
               -DARROW_WITH_LZ4=OFF \
               -DARROW_WITH_ZSTD=OFF \
               -DARROW_WITH_SNAPPY=OFF \
-              -DARROW_S3=ON \
+              ${ARROW_S3_FLAG} \
               -DARROW_SUBSTRAIT=ON \
               -DARROW_BUILD_TESTS=OFF \
               -DARROW_BUILD_BENCHMARKS=OFF \
