--- a/runtimes/rocm-tensorflow/ubi9-python-3.12/Dockerfile.rocm
+++ b/runtimes/rocm-tensorflow/ubi9-python-3.12/Dockerfile.rocm
@@ -86,6 +86,8 @@ COPY --chown=1001 ${TENSORFLOW_SOURCE_CODE}/utils ./utils/
 # Download Elyra Bootstrapper
 RUN curl -L https://raw.githubusercontent.com/opendatahub-io/elyra/refs/tags/v4.3.1/elyra/kfp/bootstrapper.py \
          -o ./utils/bootstrapper.py
+# Prevent Elyra from re-installing the dependencies
+ENV ELYRA_INSTALL_PACKAGES="false"
 
 RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
