--- a/rstudio/rhel9-python-3.12/build-args/cpu.conf
+++ b/rstudio/rhel9-python-3.12/build-args/cpu.conf
@@ -1,3 +1,3 @@
 # Base Image   : UBI 9 with Python 3.12
 # Architectures: linux/arm64, linux/x86_64
-BASE_IMAGE=registry.redhat.io/rhel9/python-312:latest
+BASE_IMAGE=quay.io/aipcc/base-images/cpu:3.0
